# extensionBack

./: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  LEARNING_QUICKSTART.md  PRODUCTION_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  README_OLD.md  README_PRODUCTION_OLD.md  TECHNICAL_SUMMARY.md  TEST_RESULTS.md  demo_learning_system.py  dump.rdb  main.py  mypy.ini  package.json  pyproject.toml  pytest.ini  render-build.sh  requirements.txt  run_all_tests.sh  test_crawler_manual.py  test_fastpath_scenario.py  test_menu.sh
docs/: 00_README_HARD_MAPPING.md  API_SPEC.md  HARD_MAPPING_RULES_5.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HARD_MAPPING_5STAGES.md  LEARNING_SYSTEM.md  README.md
docs/API/: API_REFERENCE.md  API_RENHANCEMENT.md
docs/Architecture/: ARCHITECTURE.md  ENGINE_ARCHITECTURE_RESEARCH.md  ENGINE_REFACTORING_PLAN.md  FALLBACK_VALIDATION_GATE_DESIGN.md  HARD_MAPPING_ARCHITECTURE.md  HARD_MAPPING_FINAL_ARCHITECTURE.md
docs/PRD/: FE_PRD.md  IMPLEMENTATION.md
docs/QA/: QA_AUDIT_REPORT.md  QA_FINAL_VERDICT.txt  QA_README.md  REALISTIC_DEPLOYMENT_PLAN.md  RENDER_COST_ANALYSIS.md
docs/err/: HOTFIX_BUDS_PRO_TIMEOUT.md
docs/extension/: CHROME_WEBSTORE_SUBMISSION.md
docs/normalization/: HARD_MAPPING_FINAL_SUMMARY.md  NORMALIZATION_RULES.md  NORMALIZATION_SYSTEM_ANALYSIS.md
migrations/versions/: search_failure_table.py
resources/: brands.yaml  hard_mapping.json  hard_mapping.yaml
resources/categories/: beauty.yaml  electronics.yaml  fashion.yaml  food.yaml  kids.yaml
resources/dictionaries/: brands.txt  colors.txt  common_noise.txt  materials.txt  units.txt
resources/mappings/: synonyms.global.yaml
resources/matching/: accessories.yaml  signals.yaml  (+1 more)
scripts/: clean.sh
src/: __init__.py  app.py
tests/: __init__.py  conftest.py
(+197 files in other folders)
